--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "local-m": "curl http://localhost:3001/api/models -o src/models-security.ts",
-    "stag-m": "curl https://dev-api.todo247.com/api/models -o src/models-security.ts",
-    "prod-m": "curl https://app.api.todo247.com/api/models -o src/models-security.ts"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@todo247/common": "github:develwares/common.todo247",
@@ -62,11 +59,7 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/src/",
-      "<rootDir>/libs/"
-    ],
-    "moduleNameMapper": {
-      "^@todo247/common/commons(|/.*)$": "<rootDir>/libs/commons/src/$1"
-    }
+      "<rootDir>/src/"
+    ]
   }
 }
